[package]
name = "socket_snake"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "socket_snake"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.22.1", features = ["serde"] }
rand = "*"
# latest serde has some problems with enum Color 
serde = { version = "1.0.118", features = ["derive"] }
bincode = "*"
local_ipaddress = "*"